# nIceVulkan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nIceVulkan.sln
nIceVulkan/: CMakeLists.txt  ReadMe.txt  nIceVulkan.cpp  nIceVulkan.vcxproj  nIceVulkan.vcxproj.filters
nIceVulkan/inc/: buffer.h  command_buffer.h  command_pool.h  config.h.in  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.h  device.h  framebuffer.h  gpu_memory.h  image.h  image_view.h  instance.h  ivertex.h  keyboard.h  mesh.h  model.h  mouse.cpp  mouse.h  pipeline.h  pipeline_cache.h  pipeline_layout.h  render_pass.h  semaphore.h  shader.h  shader_module.h  stdafx.h  swap_chain.h  vertex_description.h  win32_surface.h  window.h
nIceVulkan/inc/math/: irec.h  ivec2.h  mat4.h  quat.h  rec.h  vec2.h  vec3.h  vec4.h
nIceVulkan/inc/util/: directory.h  dispatcher.h  file.h  linq.h  setops.h  shortcuts.h  strext.h
nIceVulkan/inc/vkwrap/: buffer.h  command_buffer.h  command_pool.h  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.h  device.h  framebuffer.h  gpu_memory.h  image.h  image_view.h  instance.h  physical_device.cpp  physical_device.h  pipeline.h  pipeline_cache.h  pipeline_layout.h  queue.h  render_pass.h  sampler.cpp  sampler.h  semaphore.h  shader_module.h  surface_win32.h  swap_chain.h  win32_surface.h
nIceVulkan/inc/vulkan/: vk_cpp.h  vulkan.h
nIceVulkan/src/: buffer.cpp  command_buffer.cpp  command_pool.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  device.cpp  framebuffer.cpp  gpu_memory.cpp  image.cpp  image_view.cpp  instance.cpp  keyboard.cpp  model.cpp  nIceVulkan.cpp  pipeline.cpp  pipeline_cache.cpp  pipeline_layout.cpp  render_pass.cpp  semaphore.cpp  shader.cpp  shader_module.cpp  stdafx.cpp  swap_chain.cpp  win32_surface.cpp  window.cpp
nIceVulkan/src/math/: irec.cpp  ivec2.cpp  mat4.cpp  quat.cpp  rec.cpp  vec2.cpp  vec3.cpp  vec4.cpp
nIceVulkan/src/util/: directory.cpp  file.cpp  strext.cpp
nIceVulkan/src/vkwrap/: buffer.cpp  command_buffer.cpp  command_pool.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  device.cpp  framebuffer.cpp  gpu_memory.cpp  (+13 more)
